--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -16,11 +16,6 @@ section {
     margin: 16px 2% 16px;
 }
 
-aside p {
-    margin: 0;
-    padding: 0;
-}
-
 p {
     padding-left: 8px;
     margin: 8px;
@@ -37,6 +32,19 @@ aside {
     width: 45%;
     margin-left: 5%;
     padding: 8px;
+    border-radius: 8px;
+}
+
+
+aside p {
+    margin: 0;
+    padding: 0;
+}
+
+aside h3 {
+    margin: 0;
+    padding: 0;
+    background: none;
 }
 
 figure {
@@ -58,7 +66,7 @@ h2, h3 {
     color: #272635;
     background-color: #E8E9F3;
     padding: 16px;
-    width: fit-content;
+    width: max-content;
     margin-bottom: 8px;
 }
 
@@ -68,8 +76,20 @@ h2, h3 {
 }
 
 #navbar a {
+    background-color: #272635;
+    color:#F5F5F5;
+    border-radius: 4px;
     float: left;
-    padding: 16px;
-    width: 8%;
+    margin: 8px;
+    padding: 16px 8px 16px;
+    width: 9%;
     text-align: center;
+    font-size: 0.8vw;
+    font-weight: bold;
+}
+
+a {
+    text-decoration: none;
+    font-weight: bold;
+    color: #5D3FD3;
 }
