--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -30,6 +30,10 @@ section, .intro {
     margin: 16px;
 }
 
+#homepage p {
+    padding: 0;
+}
+
 .table_of_contents {
     background-color: #DCF3F9;
     width: max-content;
